--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,49 @@
     <version>1.0.0</version>
 
     <dependencies>
+		    <dependency>
+	        <groupId>org.springframework.data</groupId>
+	        <artifactId>spring-data-jpa</artifactId>
+	        <version>2.0.1.RELEASE</version>
+    		</dependency>
+    		<dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+	        <version>5.0.1.RELEASE</version>
+	     </dependency>
+	     <dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-commons-core</artifactId>
+    <version>1.4.1.RELEASE</version>
+</dependency>
+	     
+    		
+	   <!--  <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		    <version>1.5.8.RELEASE</version>
+		</dependency>
+	     -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-core</artifactId>
+		     <version>5.0.1.RELEASE</version>
+		</dependency>
+   		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk</artifactId>
+		    <version>1.11.233</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+    <artifactId>spring-web</artifactId>
+    <version>5.0.1.RELEASE</version>
+		</dependency>
+        <dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-webmvc</artifactId>
+		    <version>5.0.1.RELEASE</version>
+		</dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-core</artifactId>
@@ -35,21 +78,70 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.25</version>
         </dependency>
+        <dependency>
+	       <groupId>org.slf4j</groupId>
+	       <artifactId>slf4j-log4j12</artifactId>
+	       <version>1.7.5</version>
+	   </dependency>
+        <dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>3.2.3.RELEASE</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			  <groupId>org.testng</groupId>
+			  <artifactId>testng</artifactId>
+			  <version>6.8</version>
+			  <scope>test</scope>
+		</dependency>
+		<dependency>
+		   <groupId>org.easytesting</groupId>
+		   <artifactId>fest-assert-core</artifactId>
+		   <version>2.0M10</version>
+		</dependency>
+			<dependency>
+			    <groupId>com.github.derjust</groupId>
+			    <artifactId>spring-data-dynamodb</artifactId>
+			    <version>4.5.0</version>
+			</dependency>
+	      <dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.0</version>
+		  </dependency>
+		<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.2.12</version>
+</dependency>
     </dependencies>
 
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.amazonaws</groupId>
-                <artifactId>aws-java-sdk-bom</artifactId>
-                <version>1.11.123</version>
-                <type>pom</type>
+			    <groupId>com.amazonaws</groupId>
+			    <artifactId>aws-java-sdk</artifactId>
+			    <version>1.11.233</version>
+			     <type>pom</type>
                 <scope>import</scope>
             </dependency>
-        </dependencies>
-    </dependencyManagement>
-
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-releasetrain</artifactId>
+            <version>Dijkstra-SR5</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
 
     <build>
         <plugins>
@@ -62,22 +154,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
-                <configuration>
-                    <createDependencyReducedPom>false</createDependencyReducedPom>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+         
         </plugins>
     </build>
 
